E2J/part4/t45.output
running e2j
compiling the Java generated code
My_e2j.java:16: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:34: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
2 errors
